WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152468
FTL B3 should do vararg calls
https://bugs.webkit.org/show_bug.cgi?id=152468
Summary
FTL B3 should do vararg calls
Filip Pizlo
Reported
2015-12-20 12:33:00 PST
Patch forthcoming.
Attachments
it begins
(9.33 KB, patch)
2015-12-20 12:33 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
a bit more
(15.01 KB, patch)
2015-12-20 17:00 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
almost done
(17.22 KB, patch)
2015-12-20 17:35 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
it compiles
(18.27 KB, patch)
2015-12-20 22:39 PST
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
it seems to work
(24.66 KB, patch)
2015-12-21 10:28 PST
,
Filip Pizlo
benjamin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-12-20 12:33:50 PST
Created
attachment 267723
[details]
it begins
Filip Pizlo
Comment 2
2015-12-20 17:00:04 PST
Created
attachment 267727
[details]
a bit more
Filip Pizlo
Comment 3
2015-12-20 17:35:45 PST
Created
attachment 267728
[details]
almost done
Filip Pizlo
Comment 4
2015-12-20 22:39:19 PST
Created
attachment 267737
[details]
it compiles
Filip Pizlo
Comment 5
2015-12-21 10:28:01 PST
Created
attachment 267754
[details]
it seems to work
WebKit Commit Bot
Comment 6
2015-12-21 10:29:35 PST
Attachment 267754
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:5139: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:5227: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:5233: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:5322: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 4 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Benjamin Poulain
Comment 7
2015-12-21 10:47:58 PST
Comment on
attachment 267754
[details]
it seems to work View in context:
https://bugs.webkit.org/attachment.cgi?id=267754&action=review
I am not familiar with the JS calling convention but nothing looks crazy here.
> Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:5112 > + // different register for the late for the post-clobbering version of the value. This gives > + // the compiler to spill these values without having to burn any callee-saves.
"to spill"->"a chance to spill"?
Filip Pizlo
Comment 8
2015-12-21 10:53:24 PST
(In reply to
comment #7
)
> Comment on
attachment 267754
[details]
> it seems to work > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=267754&action=review
> > I am not familiar with the JS calling convention but nothing looks crazy > here. > > > Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:5112 > > + // different register for the late for the post-clobbering version of the value. This gives > > + // the compiler to spill these values without having to burn any callee-saves. > > "to spill"->"a chance to spill"?
Yeah, that's what I meant!
Filip Pizlo
Comment 9
2015-12-21 10:57:35 PST
Landed in
http://trac.webkit.org/changeset/194334
Csaba Osztrogonác
Comment 10
2015-12-21 13:23:53 PST
(In reply to
comment #9
)
> Landed in
http://trac.webkit.org/changeset/194334
It broke the EFL build:
https://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK2/builds/26013
../../Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp: In member function ‘void JSC::FTL::{anonymous}::LowerDFGToLLVM::compileCallOrConstructVarargs()’: ../../Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:5084:14: error: variable ‘forwarding’ set but not used [-Werror=unused-but-set-variable] bool forwarding = false;
Csaba Osztrogonác
Comment 11
2015-12-21 13:24:38 PST
Fix landed in
https://trac.webkit.org/changeset/194347
Filip Pizlo
Comment 12
2015-12-21 14:48:26 PST
(In reply to
comment #11
)
> Fix landed in
https://trac.webkit.org/changeset/194347
Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug